高并发流式语音合成管线：分片、调度与秒级响应 md add some detailed ideas from others

--- a/distributed/高并发流式语音合成管线：分片、调度与秒级响应.md
+++ b/distributed/高并发流式语音合成管线：分片、调度与秒级响应.md
@@ -2,9 +2,9 @@
 
 ## 前言：当「实时交互」成为刚需，我们面临什么挑战？
 
-想象一下你在车里说：“你好小迪，播放周杰伦的《晴天》”。
+想象一下你在车里说：“你好SiriCar，播放周杰伦的《晴天》”。
 
-一个糟糕的体验是：你说完，等了三四秒，然后完整的音频才“哐当”一下播放出来。而一个理想的体验是：你刚说到“你好小迪”，系统就已经开始响应，几乎在你话音落下的瞬间，合成的音频流就开始推送，实现了真正的“边听边说边播”。
+一个糟糕的体验是：你说完，等了三四秒，然后完整的音频才“哐当”一下播放出来。而一个理想的体验是：你刚说到“你好SiriCar”，系统就已经开始响应，几乎在你话音落下的瞬间，合成的音频流就开始推送，实现了真正的“边听边说边播”。
 
 这种理想体验的背后，对我们工程师提出了三大核心挑战：
 
@@ -67,7 +67,15 @@ graph TD
 
 这一层的核心目标是：**只重新合成绝对必要的部分**。
 
-当ASR结果从 `v1` 更新到 `v2` 时，最简单的做法是丢弃 `v1` 的所有音频，重新合成 `v2`。但这既浪费资源，又会导致用户感知的延迟和卡顿。语义缓冲层通过文本比对算法，将浪费降到最低。
+### Token Buffer 与版本控制 (Streamed Token Buffer)
+
+在高并发场景下，我们并不会一次性拿到完整的文本，而是**源源不断的 token 流**。因此语义缓冲层内部维护了一个 **流式 Token Buffer**：
+
+- **Token 列表**：将 ASR partial 结果拆分为 token，并记录其先后顺序；
+- **版本号 rev**：每一次 partial 结果都会递增 rev，方便后续 Diff 与回滚；
+- **最长公共前缀 (LCP)**：通过 LCP 快速判断可复用前缀，减少重合成范围。
+
+利用「token + rev」的双索引，我们可以**在毫秒级定位可复用音频**，并把重合成控制在最小声学单元。
 
 ### 方案A：最长公共前缀 (Longest Common Prefix, LCP)
 
@@ -145,6 +153,38 @@ sequenceDiagram
 - **20 token 上限**: 如果累积的待合成token超过20个，也立即触发合成，避免单次请求文本过长导致处理缓慢。
 
 这种“小步快跑”的策略，确保了每次TTS请求都是轻量级的，能够被快速处理。
+
+### 4. 输出队列管理 (Output Queue Management)
+
+生成音频之后，还需要高效、稳定地**发送**给客户端。我们将服务器侧的音频帧队列抽象为：
+
+| 队列块 | 作用 |
+| ------ | ---- |
+| **已确认块 (Committed)** | 位于文本稳定前缀，对应的音频已被客户端播放或缓存，可安全前推。 |
+| **Shadow 块** | 位于变化尾部，若下一次 ASR 修订，需要整体替换。 |
+
+RTP/序列号始终基于 **已确认块 + Shadow 块** 单调递增，客户端即使替换尾块，也不会感觉到时间线倒退或跳变，确保连贯播放体验。
+
+## 链路级低延迟优化：协议、编码与网络
+
+除了服务端的并行调度，我们还需要从 **协议选型、音频编码、网络传输** 等方面系统性压缩端到端延迟。
+
+### 1. 协议选择
+
+* **WebSocket**：持久化双向通道，避免 HTTP 握手往返，适合浏览器与移动端。
+* **gRPC Streaming**：基于 HTTP/2，多路复用 + 二进制帧，适合作为微服务内部链路。
+
+### 2. 音频编码：Opus
+
+Opus 支持 **2.5 ms – 60 ms** 可变帧长，低延迟且压缩率高（16-32 kbps 仍保持良好音质），在弱网环境尤为友好。
+
+### 3. 网络侧优化
+
+- **Jitter Buffer**：客户端动态调整抖动缓冲，吸收时延抖动；
+- **0-RTT & 连接复用**：服务端保持长连接，减少握手，HTTP/3 进一步压缩 RTT；
+- **零拷贝 / CPU 亲和**：在发送链路避免多次内存 copy，并绑定音频 I/O 到固定核心，提升缓存命中率与上下文切换效率。
+
+这些链路层优化叠加在一起，可再为首包延迟节省约 **50-100 ms**，为严苛的 500 ms 红线争取宝贵空间。
 
 ## 第三层：供应商适配层 - 驾驭多方混沌的“外交官”
 
