浴火重生：一个高并发实时语音网关的内存优化史诗 md runtime.ReadMemStats() not light, RSS, sync.Map

--- a/design/浴火重生：一个高并发实时语音网关的内存优化史诗.md
+++ b/design/浴火重生：一个高并发实时语音网关的内存优化史诗.md
@@ -142,7 +142,7 @@ V4的优化，如同在已经很强壮的引擎上进行精密的赛车级调校
 
 **怀疑论者**：“你们这套主动内存监控，在每次请求入口都做检查，听起来开销不小。为了一个低概率的OOM风险，牺牲所有请求的性能，值得吗？”
 
-**我们**：“问得好。这正是我们最初的顾虑，也是‘权衡’的艺术所在。首先，入口的检查**极其轻量**，它只读取一个已由后台任务刷新过的全局内存状态变量（一个布尔值或一个整数），这个操作在纳秒级别，几乎没有性能损耗。真正的内存统计（`runtime.ReadMemStats()`，一个相对昂贵的操作）是在一个独立的后台协程中以较低的频率（如每秒1次）异步执行的。其次，对于我们这种服务，**内存稳定性是第一优先级**。一次OOM导致的重启是100%的服务不可用，而入口处纳秒级的检查开销，相比之下微不足道。我们选择用可控且极小的CPU开销，换取了极致的内存稳定，这笔交易非常划算。”
+**我们**：“问得好。这正是我们最初的顾虑，也是‘权衡’的艺术所在。对于我们这种服务，**内存稳定性是第一优先级**。一次OOM导致的重启是100%的服务不可用，而入口处纳秒级的检查开销，相比之下微不足道。我们选择用可控且极小的CPU开销，换取了极致的内存稳定，这笔交易非常划算。”
 
 **怀疑论者**：可是即使是异步的`runtime.ReadMemStats()`。依然触发一个短暂的Stop-The-World(STW)来保证内存视图的一致性。为了获取监控数据，却引入了对整个服务所有Goroutine的周期性暂停，这难道不是一种性能倒退吗？
 
@@ -163,6 +163,28 @@ V4的优化，如同在已经很强壮的引擎上进行精密的赛车级调校
 我们的哲学是：**没有银弹，只有体系**。每一层防御都有其覆盖的场景和极限，将它们组合起来，才能形成真正的纵深防御。”
 
 
+
+### 关于监控指标的准确性
+
+**怀疑论者**：“我们来聊聊监控。你们在V3中非常依赖`runtime.MemStats.Sys`作为OOM的告警红线。但`Sys`只是Go运行时向OS申请的内存，它与容器的真实物理内存占用（RSS）可能存在偏差。你们如何避免因为这种偏差导致的OOM误判或漏判？”
+
+**我们**：“这是一个非常深刻的问题，直击我们监控体系的核心。您完全正确，`Sys`和RSS之间存在偏差是不可避免的。我们的选择是基于一种务实的权衡：
+
+1. **成本与效率**：`runtime.ReadMemStats()`是一个完全在进程内完成的操作，虽然有STW，但相比读取Cgroup文件所涉及到的文件系统I/O，它的开销更低且更稳定。在高频监控场景下（如我们的入口熔断），我们优先选择性能确定性更高的方案。
+2. **偏差的可控性**：在大多数情况下，`Sys`是RSS的一个合理近似，并且其增长趋势与RSS高度相关。通过为`Sys`设置一个相对保守的阈值（比如容器限制的85%-92%），我们为这种偏差留出了足够的安全边际。
+3. **未来的校准机制**：您的问题也启发了我们V5版本的一个重要演进方向：**双层监控与动态校准**。我们会有一个低频的后台任务（例如每10秒），专门去读取Cgroup的`memory.current`，获取最准确的RSS值。然后，我们会用这个真实的RSS值来动态校准我们基于`Sys`的高频监控阈值。这就像用一个精准的GPS（RSS）来周期性地校准一个快速的惯性导航系统（`Sys`），兼顾了准确性和性能。”
+
+
+
+### 关于并发模型的安全性
+
+**怀疑论者**：“我们再来谈谈并发。你们从V1就开始使用`sync.Map`，但就像你们自己承认的，它本身不保护存入的值。当‘清道夫’协程与消费协程并行时，你们对指针对象的并发读写有何保障？是否存在数据竞争？”
+
+**我们**：“您这个问题非常关键，它触及了我们架构演进过程中的一个技术债。您指出的数据竞争风险是真实存在的。在当前的实现中，我们**并没有为存储在`sync.Map`中的指针对象提供额外的并发保护**。这意味着，当‘清道夫’协程正在清理一个会话（例如，修改其内部状态或调用`Cleanup`方法）的同时，另一个处理用户请求的协程可能正在读取甚至修改同一个会话对象。
+
+这为什么没有在早期引发大规模的故障？我们猜测有几个幸运的原因：1）读写操作的时间窗口极短；2）清理逻辑与业务逻辑在大多数情况下操作的是会话对象内不同的字段。但这完全是侥幸，不是可靠的设计。
+
+**承认不足并计划改进**：这是我们V4之后必须解决的核心问题。正确的做法，正是在会话对象内部引入一个细粒度的锁（如`sync.RWMutex`），所有对会话内容的操作都必须先获取锁。这会形成一种‘两级锁’的模式：`sync.Map`保证顶层指针存取的原子性，内部锁保证对象自身内容的修改安全。这将会是我们下一个版本迭代的重中之重，感谢您一针见血地指出了我们当前的脆弱之处。”
 
 ### 关于GC策略的内在矛盾
 
